trackpage is working so far, have to get the user value on the input

--- a/src/app/pages/adminassigntask/adminassigntask.component.html
+++ b/src/app/pages/adminassigntask/adminassigntask.component.html
@@ -5,7 +5,8 @@
       <div class="container-fluid sticky fixed-top " >
   
             <!--Start of logo -->
-            <h1 class="navbar-brand" routerLink=""><img src="/assets/images/tutLogo.png"> </h1> <P class = "center">ADMIN VIEW REQUEST</P>
+            <h1 class="navbar-brand" routerLink=""><img class ="logo" src="/assets/images/tutLogo.png"> </h1>
+            <img class="toggleMenu" src="/assets/images/icons8-menu.svg" width="80">
     
             <!--End of logo-->
       </div>
@@ -21,7 +22,9 @@
         <nav class="breadcrumbNav">
             <ul >
                 
-                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a href="#">View Request</a></li>
+                <li class = "breadcrumb-item active" id = "breadcrumbpadding"><a id="hover" href="#">View Request</a></li>
+               
+
 
                 
             </ul>
@@ -33,38 +36,52 @@
             <form class="backFrom">
                 <div class = "contentForm">
 
-                    <h3 class = "toptitle">Admin Assign Task</h3>
-                    <div class = "myTable">
-                        <table class="table table-bordered">
-                            <thead>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Category</th>
-                                <th scope="col">Description</th>
-                                <th scope="col">Venue</th>
-                                <th scope="col">Image</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td class="rowPadding">King Malatji</td>
-                                <td class="rowPadding">HardWare</td>
-                                <td class="rowPadding">Monitor is broken</td>
-                                <td class="rowPadding">10-G42</td>
-                                <td class="rowPaddingImage"><img class="requestimgSize" src = "/assets/images/backArrow.png"></td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    
-                    <button>Assign Task</button>
-                    
+                    <h3 class = "toptitle">Admin View Requests</h3>
 
+                    
+                        <!--<div id = "card" *ngFor="let all of alldata">
+                            <div class="card " >
+                                <div class="card-body" >
+                                    <div class="card-titles" >
+                                        <h6 class="card-title">Ref:{{all.id}}</h6>
+                                        <h6 class="card-title" id = "date">RequestDate:{{all.req_date
+                                        }}</h6>
+                                    </div>
+                                  
+                                    <div class="imgStaffInfo">
+                                        <img src="/assets/images/icon _profile.png" >
+                                        <p class="card-text">{{all.staff_name
+                                        }}<br>{{all.staff_name}}@gmail.com</p>
+                                        <button class = "btn1">View</button>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </div>-->
+                        
+
+                        <div id = "card2">
+                            <div class="card ">
+                                <div class="card-body">
+                                    <div class="card-titles">
+                                        <h6 class="card-title"></h6>
+                                        <h6 class="card-title" id = "date">Assign Date:</h6>
+                                    </div>
+                                  
+                                    <div class="imgStaffInfo">
+                                        <img src="/assets/images/icon _profile.png" >
+                                        <p class="card-text">thabelo livhimbi<br>LivhimbiT@gmail.com<br>0810539853</p>
+                                        <button class = "btn1" routerLink="/adminsinglerequest">View</button>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                       
+                        
+                    
                 </div>
             </form>
-    </div>
-    
+        </div>
 </body>
-
-
 
