--- a/src/app/pages/adminviewsinglerequest/adminviewsinglerequest.component.html
+++ b/src/app/pages/adminviewsinglerequest/adminviewsinglerequest.component.html
@@ -46,9 +46,18 @@
                                 </div>
                               
                                 <div class="imgStaffInfo">
-                                    
+                                    <p class="category">Category: Plumbing</p>
+                                    <div class="selectPriority">
+                                        <label for="cars">Choose a car:</label>
+                                        <select name="cars" id="cars">
+                                          <option value="volvo">Volvo</option>
+                                          <option value="saab">Saab</option>
+                                          <option value="opel">Opel</option>
+                                          <option value="audi">Audi</option>
+                                        </select>
+                                    </div>
                                     <p class="card-text">Palesa Mahlangu<br>description: leaking Taps<br>10-G42</p>
-                                    <button class = "btn1" routerLink="">ViewTechnician</button>
+                                    <button class = "btn1" routerLink="/availabletechs">ViewArtisan</button>
                                 </div>
                                 
                             </div>
@@ -64,9 +73,17 @@
                                 </div>
                               
                                 <div class="imgStaffInfo">
-                                    
+                                    <p class="category">Category: Electrical</p>
+                                    <div class="selectPriority">
+                                        <label for="priority">Select Priority</label>
+                                        <select name="priority" id="priority" >
+                                          <option value="low">Volvo</option>
+                                          <option value="Medium">Opel</option>
+                                          <option value="audi">Audi</option>
+                                        </select>
+                                    </div>
                                     <p class="card-text">thabelo livhimbi<br>Description: Flickering lights<br>10-G28</p>
-                                    <button class = "btn1" routerLink="">ViewTechnician</button>
+                                    <button class = "btn1" routerLink="/availabletechs">ViewArtisan</button>
                                 </div>
                                 
                             </div>
