--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -22,7 +22,7 @@
               </div>
             </div>
               <li>
-                  <a class="nav-link active" id="ModalExample" >ADMIN</a>
+                  <a class="nav-link active" id="ModalExample" routerlink="/adminview">ADMIN</a>
               </li>
               <li>
                 <a class="nav-link active" id="ModalExample" >TECHNICIAN</a>
