--- a/src/app/pages/track-request/track-request.component.css
+++ b/src/app/pages/track-request/track-request.component.css
@@ -43,7 +43,7 @@ a {
 body {
 
     margin-top: 100px;
-    border: 1px solid blue;
+   
     height: 1055px;
 }
 
@@ -119,7 +119,7 @@ body {
     height: 1055px;
     margin-left: 17.9%;
     
-    border: 1px solid green;
+    
    padding-left: 50px;
 
 
@@ -169,6 +169,7 @@ h4 {
     background-color: rgb(255, 254, 254);
     box-shadow: 0px 2px 6px black;
     border-radius: 10px;
+    overflow-y: scroll;
     width: 850px;
     height: 500px;
     margin: auto 17.5%;
