--- a/src/app/pages/track-request/track-request.component.html
+++ b/src/app/pages/track-request/track-request.component.html
@@ -35,17 +35,22 @@
                 <H4>Click on the tabs to view progress of your request(s)</H4>
                
                 <div class = "container">
-                        <label for="zero" id="red" class="todo" >Todo</label>
+                        <label for="zero" id="red" class="todo" (click)="recieveAllRequest()">Todo</label>
                         <label for="zero" id="blue" class="Assigned">Assigned</label>
-                        <label for="fifty" id="orange" class="InProgress">InProgress</label>
-                        <label for="zero" id="gray" class="OnHold">OnHold</label>
-                        <label for="hundred" id="green" class="Done">Done</label>
+                        <label for="fifty" id="orange" class="InProgress" (click)="getInprogress()">InProgress</label>
+                        <label for="zero" id="gray" class="OnHold" (click)="getOnHoldTasks()">OnHold</label>
+                        <label for="hundred" id="green" class="Done" (click)="getCompleteTasks()">Done</label>
                 </div>
                
                 <div class ="middleTableDiv">
                     <div class="middleTableDivTextMargin" *ngFor = "let request of allRequest">
-                        {{request.progress}} 
+                        <p>Category:{{request.category}}</p>
+                        <p>Description:{{request.description}}</p>
+                        <p>Request Date:{{request.req_date}}</p>
+                        <p>Venue:{{request.venue}}</p>
+                        <hr>
                     </div>
+                    
 
                 </div>
 
