--- a/src/app/redirectPages/footer/footer.component.css
+++ b/src/app/redirectPages/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer {
    width: 100%;
    
-    background: #005596;
+    background: black;
     height: 42px;
     margin:auto 0;
     padding-top: 8px;
