--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -4,6 +4,7 @@
     margin-right: 0%;
     
   }
+  
   .nav-tabs {
   position: center;
   width: 335px;
@@ -114,7 +115,7 @@
   
   
   /*Navigation*/
-  
+/*   
   nav {
     height: 72px;
     background: #0c0c0c;
@@ -152,7 +153,7 @@
   
   .active {
     color:#0e0d0d;
-  }
+  } */
   
   #menu-icon {
     height: 100%;
@@ -287,3 +288,123 @@
     padding: 15px;
 }
  
+
+.sideNav {
+  float: left;
+  box-shadow: 5px 0 2px #969292;
+  width: 335px;
+  height: 1055px;
+  
+}
+
+.breadcrumbNav {
+  margin: 12% 10px;
+  padding: 20px 30px;      
+}
+#breadcrumbpadding {
+
+  width: 115px;  
+  padding: 6px 0;
+}
+
+a {
+  padding-top: 20px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height */
+
+  letter-spacing: 0.035em;
+  text-transform: capitalize;
+
+  color: #005596;
+  text-decoration: none;
+}
+
+.breadcrumbNav ul {
+
+  list-style:none ;
+  flex-direction: column;
+}
+.breadcrumb-item.active {
+ 
+  
+  border-bottom: 3px solid #005596;
+  width: 115px;  
+  
+}
+
+.anchorBorder{
+
+    
+  margin:0 20%;
+}
+
+#hover:hover {
+  font-weight: bold;
+ 
+ 
+}
+  
+
+.nav-item{
+    padding: 8px 24px;
+    
+    transition: 0.4s;
+    font-family: 'georgia';
+    margin-bottom: 24px;
+    margin-left: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    background: white;
+  }
+  
+  .nav-item:hover {
+    
+    text-decoration: none;
+    padding: 8px 0;
+    border-left: 8px solid rgb(14, 60, 90);
+    box-shadow: 4px 4px 4px rgba(70, 69, 69, 0.993);
+  }
+  
+  
+  .nav-link.active {
+    border: none;
+  }
+
+  
+  .header {
+    height: 72px;
+    background: #0c0c0c;
+    width: 100%;
+    margin: 0;
+    position: fixed;
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    padding:0 16px 0 0;
+    box-sizing: border-box;
+    z-index: 100;
+  }
+  
+  .header a {
+    padding: 0 32px;
+    color: #eee;
+    transition: 0.4s;
+  }
+  
+  .header a:hover {
+    text-decoration: none;
+    color: red;
+  }
+  
+  .header ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    margin: 0;
+  }
