--- a/src/app/component/component.component.html
+++ b/src/app/component/component.component.html
@@ -1,12 +1,27 @@
 
-<nav class= "navbar   ">
-    
-    <div class="container-fluid">
-        <a class="navbar-brand" href=""><img class = "img" src="assets/images/LogoPic.png"></a>
-        <h4 class="">Dashboard</h4>
-    </div>
-    
-</nav>
+<div class="log d-flex justify-content-end">
+    <nav class="navbarSteve">
+        <div id="logo-text">
+            <a href="#">
+                <img src="assets/images/tutLogo.png" alt="SMART FARM"
+                    style="float: left;height: 72px;width: 225px;" routerLink="read" class="image">
+            </a>
+        </div>
+        <div id="menu-icon">
+            <i class="fas fa-bars"></i>
+        </div>
+        <ul>
+            <li>
+
+                <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
+                        class="btn btn-success">LOGOUT</button></a>
+            </li>
+        </ul>
+
+    </nav>
+</div>
+
+
 
 
 
