--- a/src/app/pages/adminviewprogress/adminassigntask.component.css
+++ b/src/app/pages/adminviewprogress/adminassigntask.component.css
@@ -1,3 +1,77 @@
+.navbarSteve {
+    height: 85px;
+    background: #0c0c0c;
+    width: 100%;
+    margin: 0;
+    position: fixed;
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    display: flex;
+    justify-content: space-between;
+    padding:0 16px 0 0;
+    box-sizing: border-box;
+    z-index: 100;
+  }
+
+  .image{
+
+    margin-top: 2%;
+  }
+  #menu-icon {
+    height: 100%;
+    font-size: 28px;
+    padding: 0 4px;
+    color: #eee;
+    display: none;
+    align-items: center;
+  }
+  .navbarSteve a {
+    padding: 0 32px;
+    color: #eee;
+    transition: 0.4s;
+  }
+  
+  .navbarSteve a:hover {
+    text-decoration: none;
+    color: red;
+  }
+  
+  .navbarSteve ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    margin: 0;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .sticky {
     background-color: black;
     height:115px;
