--- a/src/app/pages/adminviewprogress/adminassigntask.component.html
+++ b/src/app/pages/adminviewprogress/adminassigntask.component.html
@@ -1,18 +1,26 @@
 
-<nav class="navbar navbar-expand-lg ">
-    <!--Start of navigation section-->
 
-      <div class="container-fluid sticky fixed-top " >
-  
-            <!--Start of logo -->
-            <h1 class="navbar-brand" routerLink=""><img class ="logo" src="/assets/images/tutLogo.png"> </h1>
-            <img class="toggleMenu" src="/assets/images/icons8-menu.svg" width="80">
-    
-            <!--End of logo-->
+<div class="log d-flex justify-content-end">
+  <nav class="navbarSteve">
+      <div id="logo-text">
+          <a href="#">
+              <img src="assets/images/tutLogo.png" alt="SMART FARM"
+                  style="float: left;height: 72px;width: 225px;" routerLink="read" class="image">
+          </a>
       </div>
-  
-      <!--End of navigation section-->
-</nav>
+      <div id="menu-icon">
+          <i class="fas fa-bars"></i>
+      </div>
+      <ul>
+          <li>
+
+              <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
+                      class="btn btn-success">LOGOUT</button></a>
+          </li>
+      </ul>
+
+  </nav>
+</div>
 
 
 
