--- a/src/app/stafffeedback/stafffeedback.component.html
+++ b/src/app/stafffeedback/stafffeedback.component.html
@@ -74,15 +74,15 @@
 
                         </div>
 
-                        <div class="descriptionTextarea">
+                        <div class="descriptionTextarea" >
 
                             <h3 class="descriptionTitle">Give your description below</h3>
-                            <textarea id="description" rows="8" [(ngModel)]="description" name="description"
+                            <textarea id="description" rows="8" name="description"
                                 placeholder="Enter the description of the feedback">
 
                                     </textarea>
                                     <div class="btn-submit">
-                                          <button type="submit" value="submit" (click)="submitResults()">Send</button>
+                                          <button type="submit" value="submit" >Send</button>
                                     </div>
                           
                         </div>
