--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,13 +10,13 @@
           <br>
         
           <label class="d-block mb-4">
-            <span class="form-label d-block" class="row mx-0 justify-content-center">Admin Number</span>
+            <span class="form-label d-block" class="row mx-0 justify-content-center">Admin Email</span>
             <br>
             <input
             [(ngModel)]="adminLogin.admin_email" name="adminLogin.admin_email"
               type="text"
               class="form-control"
-              placeholder="214412845"
+              placeholder="Email address"
             />
           </label>
 
@@ -27,7 +27,7 @@
             [(ngModel)]="adminLogin.password" name="adminLogin.password"
               type="text"
               class="form-control"
-              placeholder="214412845"
+              placeholder="password"
             />
           </label>
   
