--- a/src/app/track-request/track-request.component.html
+++ b/src/app/track-request/track-request.component.html
@@ -27,20 +27,34 @@
 
 
 <body>
-<div class="d-flex justify-content-between">
+    <div class="d-flex justify-content-between">
     
-</div>
-    <div class="sideNav">
-        <nav class="breadcrumbNav">
-            <ul>
-                <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                        routerLink="/staffpage">Request</a></li>
-                <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
-                        disabled="true">Tracking</a></li>
-            </ul>
-
-        </nav>
     </div>
+        <div class="sideNav">
+            <nav class="breadcrumbNav">
+                <ul>
+                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
+                            routerLink="/staffpage"><b>REQUEST</b></a></li>
+                    </ul>
+                    <ul>
+                    <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
+                            disabled="true"><b>TRACKING</b></a></li>
+                </ul>
+    
+                <br>
+                <br>
+                <br>
+    
+                <ul>
+                    <li>
+        
+                        <a href="#" class="nav-link active" id="ModalExample" (click)="logout()"><button type="button"
+                                class="btn btn-success">LOGOUT</button></a>
+                    </li>
+                </ul>
+    
+            </nav>
+        </div>
     <div class="contentContainerRight">
         <form class="backFrom">
             <h3 class="toptitle">Staff Track Request</h3>
