Got data from backend server, and post

--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -31,7 +31,7 @@
                 <ul>
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="" 
                       disabled>View Requests</a></li>
-                        <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminviewprogress">View Progress</a></li>
+                        <li class = "" id = "breadcrumbpadding"><a class ="" id="hover" href="#"   routerLink="/adminprogress">View Progress</a></li>
                 </ul>
             </nav>
         </div>
