--- a/src/app/adminassigntask/adminassigntask.component.css
+++ b/src/app/adminassigntask/adminassigntask.component.css
@@ -14,8 +14,10 @@ body {
   }
   
   #logoDiv{
-  
+
     margin-left: 1%;
+    margin-top: 7.2px;
+  
   }
   .container2{
     
@@ -415,7 +417,7 @@ body {
   
     
     .header {
-      height: 72px;
+      height: 82px;
       background: #0c0c0c;
       width: 100%;
       margin: 0;
