--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -12,6 +12,8 @@ body {
 #logoDiv{
 
   margin-left: 1%;
+  margin-top: 7.2px;
+
 }
 .container2{
   
@@ -410,7 +412,7 @@ a:disabled, a[disabled] {
 
   
   .header {
-    height: 72px;
+    height: 82px;
     background: #0c0c0c;
     width: 100%;
     margin: 0;
