--- a/src/app/adminprogress/adminprogress.component.html
+++ b/src/app/adminprogress/adminprogress.component.html
@@ -38,76 +38,73 @@
             </nav>
         </div>
   
-        <div class="tab-content ps-3 mt-4" id="myTabContent">
+        <div class="tab-content border ps-3 mt-4" id="myTabContent">
   
                 <div class = "contentForm" >
                    
                     <div class="departmenCategoryText">
-                        <h2>Campus: Soshanguve</h2>
-                        <h4>Department:Electrical</h4>
-                        <h5>Category:</h5>
+                        <h2></h2>
+                        <h4></h4>
+                        <h5></h5>
                     </div>
                     
-                    <div class="content card mt-4 p-4">
+                    <div class="content  mt-4 p-4">
   
                 
                         <h1 class="d-flex justify-content-center" style="background-color: rgb(182, 179, 179);">Admin View Progress</h1>
   
                         <div class = "contentForm">
   
-                              <nav class="navtab">
+                                <nav class="navtab">
                                   <div class="nav nav-tabs progressBtns" id="nav-tab" role="tablist">
                                     <button class="nav-link  active colorAmber" id="nav-in-progress-tab" data-bs-toggle="tab" data-bs-target="#nav-in-progress" type="button" role="tab" aria-controls="nav-in-progress" aria-selected="true">In-progress</button>
                                     <button class="nav-link  colorRed" id="nav-done-tab" data-bs-toggle="tab" data-bs-target="#nav-done" type="button" role="tab" aria-controls="nav-done" aria-selected="false">Done</button>
       
                                   </div>
                                 </nav>
-                                <div class="tab-content" id="nav-tabContent">
+                                <!--Container of bothe tab tables -->
+                                <div class="tab-content" id="nav-tabContent ">
+                                  <!--Start of In progress Task tab table content-->
                                   <div class="tab-pane fade show active" id="nav-in-progress" role="tabpanel" aria-labelledby="nav-in-progress-tab">
                                     <div class="left">
-  
+                                      <input type="text" id=""placeholder="Search for reference.." id="search" name="search" title="Type in a name" [(ngModel)] ="search" >
+                                      {{search}}
                                       <button class="printReportBtn" (click)="printer()" target="_blank">Print Report</button>
                                       <div class="card  contentToPrint">
                                           
-                                          <table class="table table-hover" >
+                                          <table class="table table-hover" id="">
                                               <thead>
                                                 <tr>
+                                                  <th scope="col">Log Reference</th>
                                                   <th scope="col">Staff Name</th>
-                                                  <th scope="col">Category</th>
                                                   <th scope="col">Description</th>
-                                                  <th scope="col">Venue</th>
+                                                  
                                                 </tr>
                                               </thead>
-                                              <tbody>
-                                                <tr>
-                                                  <th scope="row">Kamo Hlasa</th>
-                                                  <td>Electrical</td>
-                                                  <td>Flickering lights</td>
-                                                  <td>10-G06</td>
+                                              <tbody >
+                                                <tr *ngFor ="let inprogress of inprogressTasks ">
+                                                  <th scope="row">{{inprogress.id}}</th>
+                                                  <td>{{inprogress.staff_name}}</td>
+                                                  <td>{{inprogress.description}}</td>
+                                                  
                                                 </tr>
                                                 <tr>
-                                                  <th scope="row">dipono minose</th>
-                                                  <td>Plumbing</td>
-                                                  <td>Water is leaking</td>
-                                                  <td>10-G06</td>
+                                                  <th scope="row">Dummy Ref</th>
+                                                  <td>Dummy Staff Name</td>
+                                                  <td>Dummy DecripWater is leaking</td>
+                                                 
                                                 </tr>
-                                                <tr>
-                                                  <th scope="row">Kabelo malatji</th>
-                                                  <td >Door is broken</td>
-                                                  <td>Wood technician</td>
-                                                  <td>10-G06</td>
-                                                </tr>
+                                               
                                                
                                               </tbody>
                                             </table>
                                       </div>
                                     </div>
-      
-      
-      
-      
-      
                                   </div>
+
+                                  <!--End of In progress Task tab table content-->
+
+                                  <!--Start of Completed Task tab table content-->
                                   <div class="tab-pane fade" id="nav-done" role="tabpanel" aria-labelledby="nav-done-tab">
                                     <div class="left">
   
@@ -117,31 +114,28 @@
                                           <table class="table table-hover" >
                                               <thead>
                                                 <tr>
-                                                  <th scope="col">Staff Name</th>
-                                                  <th scope="col">Category</th>
+                                                  <th scope="col">Log Reference</th>
+                                                  <th scope="col">Staff name</th>
                                                   <th scope="col">Description</th>
-                                                  <th scope="col">Venue</th>
+                                                  <th scope="col">LogDuration</th>
+
+                                                  
                                                 </tr>
                                               </thead>
-                                              <tbody>
-                                                <tr>
-                                                  <th scope="row">Kamo Hlasa</th>
-                                                  <td>Electrical</td>
-                                                  <td>Flickering lights</td>
-                                                  <td>10-G06</td>
+                                              <tbody >
+                                                <tr scope="row" *ngFor ="let completed of completedTasks">
+                                                  <th >{{completed.id}}</th>
+                                                  <td>{{completed.staff_name}}</td>
+                                                  <td>{{completed.description}}</td>
+                                                  <td>{{completed.Duration}}</td>
                                                 </tr>
-                                                <tr>
-                                                  <th scope="row">dipono minose</th>
-                                                  <td>Plumbing</td>
-                                                  <td>Water is leaking</td>
-                                                  <td>10-G06</td>
+                                                <tr scope="row">
+                                                  <th>Dummy Ref</th>
+                                                  <td>Dummy Staff Name</td>
+                                                  <td>Dummy Decrip Water is leaking</td>
+                                              
                                                 </tr>
-                                                <tr>
-                                                  <th scope="row">Kabelo malatji</th>
-                                                  <td >Door is broken</td>
-                                                  <td>Wood technician</td>
-                                                  <td>10-G06</td>
-                                                </tr>
+                                               
                                                
                                               </tbody>
                                             </table>
@@ -150,10 +144,10 @@
       
       
                                   </div>
+                                  <!--End of Completed Task tab table content-->
                                  
                               </div>
-               
-                      </div>
+                        </div>
                                 
                     </div>
     
@@ -171,6 +165,8 @@
     </div>
     <footer>&copy; 2023 Informatics Community Engagement Project . All Rights Reserved <p></p>
     </footer> 
+
+  
   </body>
   
   
