--- a/src/app/adminpage/adminpage.component.html
+++ b/src/app/adminpage/adminpage.component.html
@@ -39,8 +39,14 @@
                 <ul>
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
                         routerLink="/adminpage">Requests</a></li>
+                    </ul>
+                    <ul>
                     <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
                             routerLink="/adminviewprogress">View Progress</a></li>
+                </ul>
+                <ul>
+                <li class="breadcrumb-item active" id="breadcrumbpadding"><a class="anchorBorder" id="hover"
+                            routerLink="/closelog">Close Log</a></li>
                 </ul>
             </nav>
         </div>
